--- a/resources/sass/_helpers.sass
+++ b/resources/sass/_helpers.sass
@@ -105,6 +105,10 @@ p
             background-color: $purple
             color: $white
 
+            .title,
+            .subtitle
+                color: $white
+
             img
                 filter: invert(1)
 
