--- a/resources/sass/_helpers.sass
+++ b/resources/sass/_helpers.sass
@@ -119,6 +119,10 @@ p
     &.is-narrow
         max-width: 28rem !important
 
+.content
+    p
+        text-align: justify
+
 .button
     &.is-purple
         background-color: $purple
