--- a/resources/sass/_layout.sass
+++ b/resources/sass/_layout.sass
@@ -1,9 +1,12 @@
+body
+    padding-top: 320px
+
 #site-header
+    background-color: $white
     position: fixed
     top: 0
     width: 100%
     z-index: 10
-    background-color: $white
 
     #site-header-main,
     #site-logo img
